# cross-platform-cpp

./: .gitmodules
basic_cross_platform/: Makefile  helloworld.djinni  run_djinni.sh
basic_cross_platform/android_project/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
basic_cross_platform/android_project/app/src/androidTest/java/chowning/com/helloworld/: ExampleInstrumentedTest.java
basic_cross_platform/android_project/app/src/main/: AndroidManifest.xml
basic_cross_platform/android_project/app/src/main/cpp/: native-lib.cpp
basic_cross_platform/android_project/app/src/main/java/chowning/com/helloworld/: MainActivity.java
basic_cross_platform/android_project/app/src/main/res/layout/: activity_main.xml
basic_cross_platform/android_project/app/src/test/java/chowning/com/helloworld/: ExampleUnitTest.java
basic_cross_platform/build_ios/libhelloworld.xcodeproj/: project.pbxproj
basic_cross_platform/build_ios/libhelloworld.xcodeproj/xcuserdata/matt.xcuserdatad/xcschemes/: All.xcscheme  libhelloworld_jni.xcscheme  libhelloworld_objc.xcscheme  xcschememanagement.plist
basic_cross_platform/cpp_project/HelloWorld/HelloWorld/: main.cpp
basic_cross_platform/cpp_project/HelloWorld/HelloWorld.xcodeproj/: project.pbxproj
basic_cross_platform/cpp_project/HelloWorld/HelloWorld.xcodeproj/project.xcworkspace/xcuserdata/matt.xcuserdatad/: UserInterfaceState.xcuserstate
basic_cross_platform/cpp_project/HelloWorld/HelloWorld.xcodeproj/xcuserdata/matt.xcuserdatad/xcschemes/: HelloWorld.xcscheme  xcschememanagement.plist
basic_cross_platform/generated-src/cpp/: hello_world.hpp
basic_cross_platform/generated-src/java/com/chowning/helloworld/: HelloWorld.java
basic_cross_platform/generated-src/java/com/mycompany/helloworld/: HelloWorld.java
basic_cross_platform/generated-src/jni/: NativeHelloWorld.cpp
basic_cross_platform/generated-src/objc/: HWHelloWorld.h
basic_cross_platform/ios_project/HelloWorld.xcworkspace/xcuserdata/matt.xcuserdatad/: UserInterfaceState.xcuserstate
basic_cross_platform/ios_project/HelloWorld/HelloWorld/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.mm
basic_cross_platform/ios_project/HelloWorld/HelloWorld.xcodeproj/: project.pbxproj
basic_cross_platform/ios_project/HelloWorld/HelloWorld.xcodeproj/xcuserdata/matt.xcuserdatad/xcschemes/: HelloWorld.xcscheme  xcschememanagement.plist
basic_cross_platform/ios_project/HelloWorld/HelloWorldTests/: HelloWorldTests.m
basic_cross_platform/ios_project/HelloWorld/HelloWorldUITests/: HelloWorldUITests.m
